  out-of-the-box on many systems now.
- Support for creation and deletion of characters.
- Weapon upgrades are now detected.
- Newbie zones are now correctly supported.
- Delay of attacks is now displayed. 200 - Delay indicates the ASPD.
- Support for partySkills on certain job classes.
- kRO/PK servers are now (partially?) supported. In config.txt, set
  pkServer to 1.
- TAB completion in Wx interface!!!

mon_control.txt:
- mon_control.txt has gained more features. The new syntax is:
  (monster name) (attack-auto) (teleport) (search) (level)

- (attack-auto):
  You can now mark a monster as "always aggressive". This means that, 
  if a certain monster is on screen, Kore will always attack it, even
  when Kore is sitting and the monster isn't attacking you.
  In mon_control.txt, set the (attack_auto) flag to 2.
  Example:
  Skeleton Soldier 2 0 0 0
- (level):
  You can configure Kore to only attack a monster, if your base level is high
  enough. Example:
  Sohee 1 0 0 50
  Only attack Sohee if your are lv 50 or higher.

New commands:
- guild join (flag)
  Accept or deny a guild join request.
- pl (number)
  Show detailed information about a player.

New config options:
- useSelfSkill_#_monsters
  partySkill_#_monsters
  partySkill_#_target_monsters
  useSelf_item_#_monsters
  Only activate useSelfSkill/partySkill/useSelf_item if a certain 
  monster attacks.
- partySkill_#_target_aggressives
  Only activate partySkill if a certain monster attacks a party member.
- partySkill_#_target_isJob
  partySkill_#_target_isNotJob
  Only activate partySkill for certain job classes

- avoidList_inLockOnly (flag)
  Set to 1, if you want to avoid people on your avoid list when they
  are on screen, but only when you are in lockMap.
- pkServer (flag)
  To to 1 if you're playing kRO or on a PK server.
- dcOnMute (flag)
  Disconnect when you have been muted by a GM.
- attackMinPlayerDistance (number)
  Only auto-attack monsters that are at least (number) blocks away from